Fixes netid alignment in header

--- a/myuw_mobile/static/css/mobile.less
+++ b/myuw_mobile/static/css/mobile.less
@@ -320,7 +320,7 @@ body {
         .header-w { position:absolute; right:15px; bottom: -1px; 
             img { width: 35px; }
         }
-        .header-netid { font-family:'roboto' /* 'uni_sansthin_caps' */; font-weight: 300; font-size: 26px; position: absolute; bottom: 0px; left: 10px; opacity: .6; color: @lighttan; /*text-transform: uppercase;*/ }
+        .header-netid { font-family:'roboto' /* 'uni_sansthin_caps' */; font-weight: 300; font-size: 26px; position: absolute; bottom: 0px; left: 15px; opacity: .6; color: @lighttan; /*text-transform: uppercase;*/ }
     }
     
 }
